added time series folder

--- a/climate_change_Time_Series.ipynb
+++ b/climate_change_Time_Series.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 2,
    "id": "fd6bfa23",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 3,
    "id": "b1a3574d",
    "metadata": {},
    "outputs": [
@@ -23,13 +23,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Month    MEI     CO2      CH4      N2O   CFC-11   CFC-12  \\\n",
-      "Year                                                                  \n",
-      "1983-01-01     5  2.556  345.96  1638.59  303.677  191.324  350.113   \n",
-      "1983-01-01     6  2.167  345.52  1633.71  303.746  192.057  351.848   \n",
-      "1983-01-01     7  1.741  344.15  1633.22  303.795  192.818  353.725   \n",
-      "1983-01-01     8  1.130  342.25  1631.35  303.839  193.602  355.633   \n",
-      "1983-01-01     9  0.428  340.17  1648.40  303.901  194.392  357.465   \n",
+      "            Month    MEI     CO2      CH4      N2O   CFC-11   CFC-12  \\\n",
+      "Year                                                                   \n",
+      "1983-01-01      5  2.556  345.96  1638.59  303.677  191.324  350.113   \n",
+      "1983-01-01      6  2.167  345.52  1633.71  303.746  192.057  351.848   \n",
+      "1983-01-01      7  1.741  344.15  1633.22  303.795  192.818  353.725   \n",
+      "1983-01-01      8  1.130  342.25  1631.35  303.839  193.602  355.633   \n",
+      "1983-01-01      9  0.428  340.17  1648.40  303.901  194.392  357.465   \n",
       "\n",
       "                  TSI  Aerosols   Temp  \n",
       "Year                                    \n",
@@ -39,19 +39,11 @@
       "1983-01-01  1366.4202    0.0673  0.176  \n",
       "1983-01-01  1366.2335    0.0619  0.149  \n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_15052\\2850055002.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  climate_df = pd.read_csv('climate_change.csv', parse_dates=['Year','Month'], index_col=['Year'])\n"
-     ]
     }
    ],
    "source": [
     "# read the CSV file\n",
-    "climate_df = pd.read_csv('climate_change.csv', parse_dates=['Year','Month'], index_col=['Year'])\n",
+    "climate_df = pd.read_csv('climate_change.csv', parse_dates=['Year'], index_col=['Year'])\n",
     "# display the first few rows of the DataFrame\n",
     "print(climate_df.head())"
    ]
